<resources>
    <string name="app_name">Weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_available">N/A</string>
    <string name="condition_image_description">condition image</string>
    <string name="unit_c">°C</string>
    <string name="location_icon">location icon</string>
    <string name="update_icon">update_icon</string>
</resources>
